<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgbuddy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bithh"
        android:contentDescription="@string/dp" />

    <TextView
        android:id="@+id/buddyname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imgbuddy"
        android:layout_alignStart="@+id/imgbuddy"
        android:layout_below="@+id/imgbuddy"
        android:layout_marginTop="12dp"
        android:text="@string/buddyname"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/buddydob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buddyname"
        android:layout_alignStart="@+id/buddyname"
        android:layout_below="@+id/buddyname"
        android:layout_marginTop="17dp"
        android:text="@string/textview" />
</RelativeLayout>