<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sagar.birthday.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Relative"
    >

        <RelativeLayout
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/nav_bar_rectangle"
            android:gravity="center_vertical"
            android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/gift" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="Birthday Reminder"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/actionbar"
            android:background="@drawable/backg"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:background="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/im" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:textSize="14dp"
            android:padding="10dp"
            android:layout_above="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/bottombar"
            android:textColorHint="@color/bottombar"
            android:background="@drawable/edit"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="230dp"
            android:textSize="14dp"
            android:padding="10dp"
            android:background="@drawable/edit"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/button"
            android:layout_alignStart="@+id/editText"
            android:layout_marginBottom="58dp"
            android:ems="10"
            android:textColor="@color/bottombar"
            android:textColorHint="@color/bottombar"
            android:textAllCaps="false"
            android:hint="@string/DateOfBirth"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_add"
            android:textAllCaps="false"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="110dp"
            android:text="@string/add_buddy" />

        <Button
            android:id="@+id/button2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/choose_image"
            android:textSize="14dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_add"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/editText"
            android:layout_below="@+id/editText"
            android:src="@drawable/calendar" android:contentDescription="@string/todo" />



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/item_back"
            android:layout_alignParentBottom="true"
            android:outlineAmbientShadowColor="#707070"
            android:outlineSpotShadowColor="#707070"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_menu" />

        </RelativeLayout>
</RelativeLayout>




